# LBKE_langchain_langgraph

./: README.md  pyproject.toml
courses/day1/: Formation_LangChain_intro.ipynb  Formation_LangChain_jour_1_après_midi_RAG.ipynb  RAG_langchain_v1.py
courses/day2/: afternoonMessageStates.py  afternoonMessageStatesWithModelWithTools.py  morning1.py  morning2_TODO.py  morning3.py  morning3_bonus.py  morning3_with_interrupt.py  test_interactive.py
day1/: Formation_LangChain_jour_1_après_midi_RAG.ipynb
day1/notebooks/: Formation_LangChain_jour_1_après_midi_RAG.ipynb
daya1/notebooks/: Formation_LangChain_jour_1_après_midi_RAG.ipynb
notebooks/: Copie_de_Formation_LangChain_jour_1_après_midi_RAG.ipynb  Formation_LangChain_intro.ipynb
react-agent/: langgraph.json  pyproject.toml
react-agent/src/react_agent/: context.py  graph.py
