[project]
name = "lang-inception"
version = "0.0.1"
description = "Formation LBKE"
authors = [
    {name = "bobain",email = "romain.burgot@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain[openai] (>=1.0.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "langgraph (>=1.0.2,<2.0.0)",
    "markdownify (>=1.2.0,<2.0.0)",
    "openai (>=2.7.1,<3.0.0)",
    "langchain-google-vertexai (>=3.0.2,<4.0.0)",
    "langchain-mistralai (>=1.0.1,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "grandalf (>=0.8,<0.9)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
